fixed horizontal scroll

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     color: rgba(32,32,32);
-  
+    overflow-x: hidden;
     
 }
 
